# turnandrun

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README.md  configure.ac
doc/: FAQ.md  commands.md
doc/resources/: vols_conf.py
scripts/: turnandrun_service_install.in  turnandrun_service_uninstall
src/: Makefile.am  dial.cpp  dial.h  main.cpp  programopts.cpp  utils.cpp  utils.h
